--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: url(images/stars.jpg) repeat;
+    background: url(assets/stars.jpg) repeat;
     background-size: 25%;
 }
 
